--- a/app/src/main/res/layout/fragment_daily_forecast.xml
+++ b/app/src/main/res/layout/fragment_daily_forecast.xml
@@ -7,24 +7,11 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/default_medium_margin"
     android:layout_marginEnd="@dimen/default_medium_margin"
+    android:layout_marginTop="@dimen/default_appbar_height"
     android:orientation="vertical"
-    tools:context=".DailyForecastFragment">
+    tools:context=".presentation.screens.dailyforecast.DailyForecastFragment">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_status_bar_height"
-        app:contentInsetStart="0dp">
-
-        <include
-            layout="@layout/custom_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
-    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/current_city_text_view"
