--- a/app/src/main/res/layout/item_daily_indicator_recycler_view.xml
+++ b/app/src/main/res/layout/item_daily_indicator_recycler_view.xml
@@ -4,9 +4,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/width_card_view"
     android:layout_height="@dimen/height_card_view"
-    android:layout_marginEnd="@dimen/default_medium_margin"
+    android:layout_marginEnd="8dp"
+    app:cardUseCompatPadding="true"
     app:cardCornerRadius="@dimen/corner_radius_card_view"
     app:cardElevation="@dimen/elevation_card_view">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
+        android:layout_gravity="bottom"
+        android:layout_margin="4dp"
+        android:padding="4dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="Wind"
+            android:layout_width="match_parent"
+            android:background="#FFFFFF"
+
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:background="#FFFFFF"
+            android:text="@string/template_title_6"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_small"
+            android:layout_weight="1"
+            android:layout_height="0dp"/>
+
+
+    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
 
