Changed main UI and add ImageLoader

--- a/app/src/main/res/layout/fragment_daily_forecast.xml
+++ b/app/src/main/res/layout/fragment_daily_forecast.xml
@@ -1,73 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/default_medium_margin"
-    android:layout_marginEnd="@dimen/default_medium_margin"
-    android:layout_marginTop="@dimen/default_appbar_height"
-    android:orientation="vertical"
-    tools:context=".presentation.screens.dailyforecast.DailyForecastFragment">
+    android:layout_height="match_parent">
 
-
-
-    <TextView
-        android:id="@+id/current_city_text_view"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/fragment_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/default_large_margin"
-        android:text="@string/template_tittle_1"
-        android:textAlignment="center">
-    </TextView>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/weather_image_view"
-        android:layout_width="@dimen/current_weather_image_width"
-        android:layout_height="@dimen/current_weather_image_height"
-        android:layout_gravity="center_vertical|center"
-        android:layout_marginBottom="@dimen/default_small_margin"
-        android:src="@drawable/sun" />
-
-    <include
-        layout="@layout/current_temperature_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/default_medium_margin" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_medium_margin"
-        android:layout_marginBottom="@dimen/default_medium_margin"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="5"
-        tools:listitem="@layout/item_daily_indicator_recycler_view"
-        tools:orientation="horizontal">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/template_title_2"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size_small">
-
-    </TextView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_medium_margin"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="7"
-        tools:listitem="@layout/item_hour_forecast_recycle_view"
-        tools:orientation="horizontal">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/default_medium_margin"
+        android:layout_marginTop="@dimen/default_appbar_height"
+        android:layout_marginEnd="@dimen/default_medium_margin"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        tools:context=".presentation.screens.dailyforecast.DailyForecastFragment">
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+        <TextView
+            android:id="@+id/current_city_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/default_large_margin"
+            android:text="@string/template_tittle_1"
+            android:textAlignment="center">
+
+        </TextView>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/weather_image_view"
+            android:layout_width="@dimen/current_weather_image_width"
+            android:layout_height="@dimen/current_weather_image_height"
+            android:layout_gravity="center_vertical|center"
+            android:layout_marginBottom="@dimen/default_small_margin"
+            android:src="@drawable/sun" />
+
+        <include
+            layout="@layout/current_temperature_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/default_medium_margin" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_medium_margin"
+            android:layout_marginBottom="@dimen/default_medium_margin"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_daily_indicator_recycler_view"
+            tools:orientation="horizontal">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/template_title_2"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_small">
+
+        </TextView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_medium_margin"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="7"
+            tools:listitem="@layout/item_hour_forecast_recycle_view"
+            tools:orientation="horizontal">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_height="50dp"
+        />
+
+</RelativeLayout>
+
+
+
+
